# module-7-DewaSRY

./: README.md  TODO.md  pyproject.toml
app/: __init__.py
app/data/: data.db
app/frontend/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/frontend/src/: app.tsx  main.tsx
app/frontend/src/common/: Footer.tsx  FormHeader.tsx  Skeletons.tsx
app/frontend/src/common/Forms/: Input.tsx  Selects.tsx  index.ts
app/frontend/src/common/NotFound/: index.tsx
app/frontend/src/common/Table/: TableBody.tsx  TableHead.tsx  index.tsx
app/frontend/src/components/: ActionsButton.tsx  HeaderLogo.tsx  MainFooter.tsx  MainModal.tsx  MainModalButton.tsx  MainTabs.tsx  ProtectionButton.tsx
app/frontend/src/container/: MainALert.tsx  MainFormModel.tsx
app/zoo_api/: __init__.py
app/zoo_api/model/: AnimalModel.py  EmployeeModel.py  GenderModel.py  RoleModel.py  ScheduleModel.py  SpeciesModel.py  UserModel.py  __init__.py  animal_model.py  employee_model.py  gender_model.py  role_model.py  schedule_model.py  special_model.py  user_model.py
app/zoo_api/schemas/: __init__.py  employee_schema.py
app/zoo_api/schemas/animal/: AnimalSchemas.py
app/zoo_api/schemas/user/: UserSchemas.py
app/zoo_api/service/: DbModelService.py  ModelMatcher.py  db_mode_service.py  model_matcher.py
app/zoo_api/utils/: FlaskDb.py  ModelType.py  SqlPhat.py  __init__.py  flask_db.py  model_type.py
app/zoo_api/views/: AnimalViews.py  EmployeeViews.py  UserViews.py  __init__.py  animal_views.py  employee_views.py  user_views.py
doc/: data.sql
(+82 files in other folders)
