[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["DewaSRY <sdewa6645@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
flask-smorest = "^0.44.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.28"
flask-sqlalchemy = "^3.1.1"
marshmallow = "^3.21.1"
flask-migrate = "^4.0.5"
pytest = "^8.0.2"
flask-jwt-extended = "^4.6.0"
flask-cors = "^4.0.0"
passlib = "^1.7.4"
mysql-connector-python = "^8.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
